refactor: cleanup annotations and minor changes